<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#DDDDDD" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/maulayout"
        android:padding="6dp"
        >

        <TextView
            android:id="@+id/textViewSoDu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/textviewlayout"
            android:padding="4dp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView1"
            android:layout_alignTop="@+id/textView1"
            android:src="@drawable/money" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewSoDu"
            android:layout_alignBottom="@+id/textViewSoDu"
            android:layout_toRightOf="@+id/imageView1"
            android:padding="5dp"
            android:text="@string/sodu" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/maulayout"
        android:padding="3dp" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:padding="3dp"
            android:text="@string/tungay" />

        <TextView
            android:id="@+id/textViewChonTuNgay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/chonngay"           
            android:background="@drawable/textviewlayout"
            android:padding="3dp"/>
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:padding="3dp"
        android:background="@drawable/maulayout"
        >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:padding="3dp"
            android:text="@string/denngay" />

        <TextView
            android:id="@+id/textViewChonDenNgay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/chonngay" 
           android:background="@drawable/textviewlayout"
            android:padding="3dp"/>

    </RelativeLayout>

    <Button
        android:id="@+id/buttonThuChiTim"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Tìm kiếm" 
        android:background="@drawable/buttoncolor"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:textColor="#fff"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/maulayout"
        android:layout_marginTop="10dp"
        >

        <ListView
            android:id="@+id/listViewGiaoDich"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
       
            android:divider="@android:color/black"
            android:dividerHeight="1dp" 
 >
        </ListView>

    </LinearLayout>

</LinearLayout>